# properties

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  properties.cmake.in  sonar-project.properties
examples/: CMakeLists.txt  sample.properties
examples/cpp/: Makefile  example.cpp
examples/csharp/: build.sh  example.cs  run.sh
examples/java/: pom.xml
examples/java/src/main/java/com/neueda/properties/example/: App.java
examples/python/: README.md  example.py
src/: CMakeLists.txt  properties.cpp  properties.h
src/bindings/: properties.csharp.i  properties.i  properties.java.i  properties.py.i
src/bindings/csharp/: CMakeLists.txt
src/bindings/java/: CMakeLists.txt  build.sh  example.java  run.sh
src/bindings/python/: CMakeLists.txt  example.py
test/: CMakeLists.txt  TestProperties.cc  unittest.cc
test/java/: CMakeLists.txt  pom.xml
test/java/src/main/java/com/neueda/properties/test/: Main.java  TestNamespaceProperties.java  TestProperties.java
test/python/: unittestpy
